# paradigma-shell

./: .buildinfo  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: build-and-test.yml  publish.yml
_sources/: index.rst.txt
docs/source/: conf.py
tests/: test_paradigma.py
